--- a/style.css
+++ b/style.css
@@ -137,5 +137,17 @@ ul.main-menu li a.active {
   display:block;
 }
 
+#introduction-section {
 
+    margin: 80px auto 0 auto;
+    text-align: center;
+}
 
+#grid-layout-33{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 3em;
+  width: 80%;
+  margin: 0 auto;
+
+}
