--- a/style.css
+++ b/style.css
@@ -151,3 +151,12 @@ ul.main-menu li a.active {
   margin: 0 auto;
 
 }
+
+#grid-layout-33 > div{
+  background-color: #f2f2f2;
+  padding: 18px;
+  text-align: center;
+  box-shadow: 0px 0px 10px #000000;
+
+}
+
