--- a/style.css
+++ b/style.css
@@ -137,13 +137,13 @@ ul.main-menu li a.active {
   display:block;
 }
 
-#introduction-section {
+introduction-section {
 
     margin: 80px auto 0 auto;
     text-align: center;
 }
 
-#grid-layout-33{
+grid-layout-33{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 3em;
@@ -152,7 +152,7 @@ ul.main-menu li a.active {
 
 }
 
-#grid-layout-33 > div{
+grid-layout-33 > div{
   background-color: #f2f2f2;
   padding: 18px;
   text-align: center;
@@ -161,7 +161,7 @@ ul.main-menu li a.active {
   margin: 80px auto 40 px auto;
 }
 
-#grid-layout-33 > div:hover{
+grid-layout-33 > div:hover{
 transition: 0.25s ease-in;
 background-color: aquamarine;
 }
