--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ grid-layout-33{
 }
 
 grid-layout-33 > div{
-  background-color: #f2f2f2;
+  background-color: #000000;
   padding: 18px;
   text-align: center;
   box-shadow: 0px 0px 10px #000000;
