--- a/style.css
+++ b/style.css
@@ -142,18 +142,24 @@ introduction-section {
     text-align: center;
 }
 
-grid-layout-33 {
+grid-layout-33{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 3em;
   width: 80%;
   margin: 0 auto;
+
 }
 
 grid-layout-33 > div {
   background-color: #000000;
   padding: 18px;
   text-align: center;
-  box-shadow: #00d1ff;
+  box-shadow: 0px 0px 10px #00d1ff;
+  margin: 80px auto 40 px auto;
 }
 
+grid-layout-33 > div:hover {
+transition: 0.25s ease-in;
+background-color: aquamarine;
+}
