--- a/style.css
+++ b/style.css
@@ -137,12 +137,12 @@ ul.main-menu li a.active {
   display:block;
 }
 
-introduction-section {
+.introduction-section {
     margin: 80px auto 0 auto;
     text-align: center;
 }
 
-grid-layout-33{
+.grid-layout-33{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 3em;
@@ -151,7 +151,7 @@ grid-layout-33{
 
 }
 
-grid-layout-33 > div {
+.grid-layout-33 > div {
   background-color: #000000;
   padding: 18px;
   text-align: center;
@@ -159,7 +159,7 @@ grid-layout-33 > div {
   margin: 80px auto 40 px auto;
 }
 
-grid-layout-33 > div:hover {
+.grid-layout-33 > div:hover {
 transition: 0.25s ease-in;
 background-color: aquamarine;
 }
