--- a/style.css
+++ b/style.css
@@ -163,3 +163,9 @@ ul.main-menu li a.active {
 transition: 0.25s ease-in;
 background-color: aquamarine;
 }
+
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background-image: url("background.png");
+}
