--- a/style.css
+++ b/style.css
@@ -167,4 +167,5 @@ background-color: aquamarine;
 #particles-js {
   width: 100%;
   height: 100vh;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("background.png");
 }
