--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ ul.main-menu li a.active {
 }
 
 #grid-layout-33 > div {
-  background-color: #000000;
+  background-color: #FFE5B4;
   padding: 18px;
   text-align: center;
   box-shadow: 0px 0px 10px #00d1ff;
@@ -166,5 +166,9 @@ background-color: aquamarine;
 
 #particles-js {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  position: fixed;
+  z-index: -10;
+  top: 0;
+  left: 0
 }
