--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@
 html {
   font-size: 62.5%;
 }
+
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  font-size: 1.5em;
+  /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
   font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #000000; /* previously white */
+  color: #000000;
+  /* previously white */
 }
 
 /**
@@ -19,9 +22,10 @@ body {
  */
 #menu-links {
   font-weight: normal;
-  text-decoration: none; 
-  color:#00d1ff;
+  text-decoration: none;
+  color: #00d1ff;
 }
+
 a:focus {
   outline: thin dotted;
 }
@@ -40,37 +44,70 @@ h4,
 h5,
 h6 {
   line-height: 1;
-  text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
+  text-rendering: optimizeLegibility;
+  /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300;
 }
-h1 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h2 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h3 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h4 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h5 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-h6 { font-size: 1.4rem; line-height: 1.6;  letter-spacing: 0; }
+
+h1 {
+  font-size: 3.6rem;
+  line-height: 1.25;
+  letter-spacing: -.1rem;
+}
+
+h2 {
+  font-size: 3.0rem;
+  line-height: 1.3;
+  letter-spacing: -.1rem;
+}
+
+h3 {
+  font-size: 2.4rem;
+  line-height: 1.35;
+  letter-spacing: -.08rem;
+}
+
+h4 {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  letter-spacing: -.05rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
+
+h6 {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
 
 /**
  * Paragraphs
  */
 p {
-  margin: 0 auto 1.5em auto;  /* bottom margin for paragraphs */
+  margin: 0 auto 1.5em auto;
+  /* bottom margin for paragraphs */
 }
-p + p {
 
-}
+p+p {}
 
 /**
  * Quotes & Blockquotes
  */
 q {
-  quotes: '\00201C' '\00201D';
+  quotes: '\00201C''\00201D';
 }
+
 q:before {
   content: open-quote;
 }
+
 q:after {
   content: close-quote;
 }
@@ -80,10 +117,11 @@ blockquote {
   border-left: 2px solid #AFC0D2;
   margin: 1.6em 10%;
   padding: .75em 1em;
-  font-size:1.8rem;
+  font-size: 1.8rem;
 }
+
 blockquote p:last-child {
-  margin-bottom: 0;  
+  margin-bottom: 0;
 }
 
 /**
@@ -91,20 +129,31 @@ blockquote p:last-child {
  */
 
 /* Full size background image */
-html, #container, .inner { background-color:transparent;}
+html,
+#container,
+.inner {
+  background-color: transparent;
+}
+
 html {
-  background:url(background.png) center center no-repeat fixed;
-  background-size:cover;
+  background: url(background.png) center center no-repeat fixed;
+  background-size: cover;
 }
+
 body {
-  max-width:800px;
-  margin:25px auto;
+  max-width: 800px;
+  margin: 25px auto;
 }
-header, #content, footer { 
-  background: #FFE5B4; /* previously black, FFE5B4 */
-  padding:25px;
-  color:#000000;  /* previously white */
-} 
+
+header,
+#content,
+footer {
+  background: #FFE5B4;
+  /* previously black, FFE5B4 */
+  padding: 25px;
+  color: #000000;
+  /* previously white */
+}
 
 /* Menu Links */
 ul.main-menu {
@@ -115,53 +164,61 @@ ul.main-menu {
   justify-content: left;
   list-style: none;
 }
+
 ul.main-menu li a {
-  margin-right:20px;
-  font-size:2.0rem;
+  margin-right: 20px;
+  font-size: 2.0rem;
   border-bottom: solid transparent 3px;
-  color:#000000; /* previously cfd2da8*/
+  color: #000000;
+  /* previously cfd2da8*/
 }
+
 ul.main-menu li a:hover {
-  color:#00d1ff; /*previously white */
+  color: #00d1ff;
+  /*previously white */
 }
+
 ul.main-menu li a.active {
-  color:#00d1ff; /* previously white*/
-  border-bottom-color:#00D1FF;
+  color: #00d1ff;
+  /* previously white*/
+  border-bottom-color: #00D1FF;
 }
 
 /* Utility classes */
 .hide {
-  display:none;
+  display: none;
 }
+
 .show {
-  display:block;
+  display: block;
 }
 
 #introduction-section {
-    margin: 80px auto 0 auto;
-    text-align: center;
+  margin: 80px auto 0 auto;
+  text-align: center;
 }
 
-#grid-layout-33{
+#grid-layout-33 {
   display: grid;
-  grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-gap: 3em;
   width: 80%;
   margin: 0 auto;
 
 }
 
-#grid-layout-33 > div {
-  background-color: #FFE5B4; /* previous FFE5B4 */
+#grid-layout-33>div {
+  background-color: #FFE5B4;
+  /* previous FFE5B4 */
   padding: 18px;
   text-align: center;
   box-shadow: 0px 0px 10px #00d1ff;
   margin: 80px auto 40px auto;
 }
 
-#grid-layout-33 > div:hover {
-transition: 0.25s ease-in;
-background-color: aquamarine;
+#grid-layout-33>div:hover {
+  transition: 0.25s ease-in;
+  background-color: aquamarine;
 }
 
 #particles-js {
@@ -195,6 +252,102 @@ a:active {
   color: black;
   background-color: transparent;
   text-decoration: underline;
+}
+
+
+.footerfoot {
+  /*  position: fixed;*/
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+}
+
+/* Footer */
+.footer-social-icons {
+  width: fit-content;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.social-icon {
+  color: black;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  background-color: transparent;
+
+  padding: 0px;
+  border-radius: 3px;
+}
+
+#icon {
+
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 6px;
+  padding-left: 6px;
+  border-radius: 3px;
+}
+
+.social-icons a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.fa-instagram:hover {
+  color: #fff;
+  vertical-align: middle;
+  background-color: #d6249f;
+  background: radial-gradient(circle at 30% 107%,
+      #fdf497 0%,
+      #fdf497 5%,
+      #fd5949 45%,
+      #d6249f 60%,
+      #285aeb 90%);
+}
+
+.fa-twitter:hover {
+  background-color: #00aced;
+}
+
+.fa-youtube:hover {
+  background-color: #e64a41;
+}
+
+.fa-github:hover {
+  background-color: #5a32a3;
+}
+
+.fa-envelope:hover {
+  background-color: #f0f;
+}
+
+.fa-spotify:hover {
+  background-color: #1db954;
+}
+
+.fa-tiktok:hover {
+  color: #111111;
+
+  filter: drop-shadow(2px 0px 0px #FD3E3E) drop-shadow(-2px -2px 0px #4DE8F4);
+}
+
+.fa-reddit:hover {
+  background-color: #ff5700;
+}
+
+.fa-medium:hover {
+  background-color: #00ab6c;
+}
+
+.fa-telegram:hover {
+  background-color: #0088cc;
 }
 
 /*
